# rusty-lab

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  book.toml  contribs.html  index.html  print.html  rocket.css  rocket.js  searchindex.js  searchindex.json
Introduccion/: 00-intro.html  01-antes-de-empezar.html  01-linux.html  01-macos.html  01-windows.html  02-ide.html
PrimeraUnidad/: 00-hola-rust.html  01-cargo.html  02-fizzbuzz.html  03-bases.html  04-variables-y-tipos.html
book/: index.html  print.html  searchindex.js  searchindex.json
book/Introduccion/: 00-intro.html
code/rust/: colored-fizzbuzz.rs  finished-fizzbuzz.rs  mutvars.rs
src/: SUMMARY.md  contribs.md
src/Introduccion/: 00-intro.md  01-antes-de-empezar.md  01-linux.md  01-macos.md  01-windows.md  02-ide.md
src/PrimeraUnidad/: 00-hola-rust.md  01-cargo.md  02-fizzbuzz.md  03-bases.md  04-variables-y-tipos.md
src/code/: fizzbuzz.py  fizzbuzz.rs
src/code/c/: fizzbuzz.c  inmutvars.c  mutvars.c
src/code/c++/: namespace.cpp  no-namespace.cpp
src/code/python/: fizzbuzz.py
src/code/rust/: hello-color.rs  inmutvars.rs
theme/: futurelab-edition.css
